# agent-identity-dev-kit

./: .gitignore
agent-identity-sdk-go/: README.md  cache.go  cache_test.go  config.go  config_test.go  context.go  context_test.go  decorators.go  decorators_test.go  e2e_integration_test.go  go.mod  go.sum  helpers_test.go  identity.go  identity_api.go  identity_api_test.go  identity_e2e_test.go  identity_test.go  model.go
agent-identity-sdk-go/examples/quickstart/: README.md  main.go
agent-identity-sdk-go/internal/cache/: cache.go
agent-identity-sdk-go/internal/config/: config.go
agent-identity-sdk-go/internal/context/: context.go
agent_identity_python_cli/: README-CN.md  pyproject.toml  setup.py
agent_identity_python_cli/tests/: __init__.py  conftest.py  test_credentials.py  test_deployer.py  test_models.py  test_ram_service.py
agent_identity_python_samples/: README-CN.md  README.md  prepare.py  requirements.txt  setup.py
agent_identity_python_samples/agentrun-langchain_sample/: README-CN.md  README.md  context.py  ding_talk_tool.py  main.py  read_oss_file.py  requirements.txt
agent_identity_python_samples/application/backend/: app.py
agent_identity_python_samples/application/frontend/: README.md  package.json
agent_identity_python_samples/application/frontend/src/: App.tsx  (+1 more)
agent_identity_python_samples/deploy_starter/: config.yml
agent_identity_python_samples/deploy_starter/tools/: get_current_time.py  weather_search.py
agent_identity_python_samples/end-to-end_sample/: README-CN.md  README.md  clear.py  requirements.txt  setup.py
agent_identity_python_samples/end-to-end_sample/deploy_starter/: __init__.py  main.py
agent_identity_python_samples/end-to-end_sample_local_automation/: README-CN.md  README.md  bootstrap.sh  clear.py  clear_services.sh  deploy_services.sh  prepare.py  requirements.txt  setup.py
agent_identity_python_samples/fetch-api-key_sample/: README-CN.md  README.md  prepare.py  requirements.txt
agent_identity_python_samples/fetch-sts-token_sample/: README-CN.md  README.md
agent_identity_python_samples/fetch-workload-access-token_sample/: README-CN.md  README.md  requirements.txt
agent_identity_python_sdk/: README.md  README.zh-CN.md  pyproject.toml  setup.py
agent_identity_python_sdk/src/agent_identity_python_sdk/: __init__.py
agent_identity_python_sdk/src/agent_identity_python_sdk/core/: __init__.py  decorators.py  identity.py
agent_identity_python_sdk/tests/agent_identity_python_sdk/context/: __init__.py  test_context.py
agent_identity_python_sdk/tests/agent_identity_python_sdk/core/: __init__.py  test_decorators.py  test_identity.py
agent_identity_python_sdk/tests/agent_identity_python_sdk/utils/: __init__.py  test_cache.py  test_config.py
(+51 files in other folders)
