[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-identity-cli"
version = "0.1.1"
description = "Agent Identity Toolkit CLI for managing AI Agent identities"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Alibaba Cloud", email = "sdk-team@alibabacloud.com"}
]
keywords = ["alibabacloud", "agent-identity", "cli", "ram", "workload-identity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "alibabacloud_credentials>=0.3.0",
    "alibabacloud_ram20150501>=1.0.0",
    "alibabacloud_sts20150401>=1.0.0",
    "alibabacloud_tea_openapi>=0.4.1,<1.0.0",
    "alibabacloud_agentidentity20250901>=0.0.1",
    "darabonba-core>=1.0.0,<2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
agent-identity-cli = "agent_identity_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

